syntax = "proto3";
package top_flights;
option go_package = "protos/top_flights";

message TopFlightsResponse {
  repeated TopFlight aircraft = 1;
}

message TopFlight {
  uint32 id = 1;
  uint32 live_clicks = 2;
  uint32 total_clicks = 3;
  string flight = 4;
  string callsign = 5;
  uint32 squawk = 6;
  string origin_code = 7;
  string origin_name = 8;
  string dest_code = 9;
  string dest_name = 10;
  string icao_type = 11;
  string full_type = 12;
}

message TopFlightsRequest {
  uint32 top = 1; // 1..=10
}